# c04-s03-exercices-Zabiullah-sz

./: .gitignore  README.md
.github/workflows/: update_student_repositories.yml
Exercises/: CMakeLists.txt  Company.cpp  Company.hpp  Department.hpp  Employee.cpp  Employee.hpp  Exercises.sln  Exercises.vcxproj  Exercises.vcxproj.filters  main.cpp  tuples.cpp  tuples.hpp
Exercises/_version_prof/: Company.cpp  Employee.cpp  competition.cpp  competition.hpp  main.cpp  params.cpp  params.hpp  pointers.cpp  pointers.hpp
settings/: files_to_update.txt  variables.txt
